--- a/index.html
+++ b/index.html
@@ -194,6 +194,17 @@ div.var2 {
 	font-size:10px;
 	padding-left:5px;
 }
+div.longvar {
+	text-align:left;
+	float:left;
+	/*overflow: hidden;
+	white-space : nowrap;
+	text-overflow: ellipsis;*/
+	font-size:10px;
+	padding-left:5px;
+	padding-top: 5px;
+	width: 60px;
+}
 /*non utilisé*/
         .nextIcon
         {
