some new styles in sass
Modification du style de l'entête des listes.
Bouton "decline" en rouge.

Ajout de quelques icônes (de categories, provenant de la Vera).

--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@ div.longvar {
 
 	.devicelist .x-list-header {
 		padding-left: 0px !important;
+		background-image: none !important;
+		background-color: transparent !important;
 	}
 	
 	.devicelist .x-list-item-label {
@@ -271,6 +273,7 @@ div.longvar {
 		width:800px;
 	}*/
 
+	
 .device-item {
 		display: inline-block;
 		margin: 3px;
