Add "loadmak" in Ajax.request
et modification de style et de texte...

--- a/index.html
+++ b/index.html
@@ -234,8 +234,6 @@ div.longvar {
             /*background-color:#aaaaaa;*/
         }
 	
-	
-	
 	.devicelist .x-list-item {
 		display: inline-block;
 		margin: 3px;
@@ -251,6 +249,8 @@ div.longvar {
 		padding-left: 0px !important;
 		background-image: none !important;
 		background-color: transparent !important;
+		border-top: none !important;
+		border-bottom: none !important;
 	}
 	
 	.devicelist .x-list-item-label {
@@ -267,12 +267,6 @@ div.longvar {
 	-webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5), 0px 2px 2px 0px rgba(255, 255, 255, 0.5) inset;
 	padding: 0px 0px 0px 0px !important;
 	}
-
-	
-/*	.devicelist .x-list-header {
-		width:800px;
-	}*/
-
 	
 .device-item {
 		display: inline-block;
