--- a/index.html
+++ b/index.html
@@ -157,6 +157,19 @@ div.var {
 	padding-top: 5px;
 
 }
+
+div.vargros {
+	text-align:center;
+	overflow: hidden;
+	white-space : nowrap;
+	text-overflow: ellipsis;
+	font-size:12px;
+	font-weight: bold;
+	padding-left:5px;
+	padding-top: 5px;
+
+}
+
 div.clock1 {
 	text-align:left;
 	overflow: hidden;
@@ -205,6 +218,19 @@ div.longvar {
 	padding-top: 5px;
 	width: 60px;
 }
+
+div.texticon {
+	position: absolute;
+	top: 45px;
+	font-size:10px;
+	text-align:center;
+	overflow: hidden;
+	white-space : nowrap;
+	width: 50px;
+	/*background-color:green;*/
+	
+}
+
 /*non utilisé*/
         .nextIcon
         {
