Add tmartinez modifications
+ several sensors

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ div.devicelevel1 {
 	float:left;
 	/*background-color:red;*/
 	width: 46px;
+	height:51px;
 }
 div.lpourcent {
 	width:46px;
@@ -100,6 +101,14 @@ div.lpourcent {
 	padding:1px;
 	text-align:center;
 	font-size:12px;
+	/*background-color:blue;*/
+}
+div.watt {
+	width:46px;
+	margin-top:-5px;
+	/*height:24px;*/
+	text-align:center;
+	font-size:10px;
 	/*background-color:blue;*/
 }
 div.devicelevel2 {
@@ -127,12 +136,14 @@ img.d100 {
 	/*background-color:red;*/
 }
 div.footer {
-	margin:1px;
+	margin-left:1px;
+	margin-right:1px;
+	margin-top:7px;
 	/*background-color:#669933;*/
 	max-width:150px;
 	width:150px;
 	text-align:left;
-	font-size:10px;
+	font-size:9px;
 	overflow: hidden;
 	white-space : nowrap;
 	text-overflow: ellipsis;
@@ -159,14 +170,14 @@ div.var {
 }
 
 div.vargros {
-	text-align:center;
-	overflow: hidden;
-	white-space : nowrap;
-	text-overflow: ellipsis;
-	font-size:12px;
-	font-weight: bold;
-	padding-left:5px;
-	padding-top: 5px;
+text-align:center;
+overflow: hidden;
+white-space : nowrap;
+text-overflow: ellipsis;
+font-size:12px;
+font-weight: bold;
+padding-left:5px;
+padding-top: 5px;
 
 }
 
@@ -184,7 +195,7 @@ div.clock1 {
 }
 div.clock2 {
 	margin-left:57px;
-	height:37px;
+	height:30px;
 	/*background-color:green;*/
 }
 img.armed2 {
@@ -220,15 +231,15 @@ div.longvar {
 }
 
 div.texticon {
-	position: absolute;
-	top: 45px;
-	font-size:10px;
-	text-align:center;
-	overflow: hidden;
-	white-space : nowrap;
-	width: 50px;
-	/*background-color:green;*/
-	
+position: absolute;
+top: 45px;
+font-size:10px;
+text-align:center;
+overflow: hidden;
+white-space : nowrap;
+width: 50px;
+line-height: 9px;
+/*background-color:green;*/
 }
 
 /*non utilisé*/
@@ -293,7 +304,7 @@ div.texticon {
 	-webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5), 0px 2px 2px 0px rgba(255, 255, 255, 0.5) inset;
 	padding: 0px 0px 0px 0px !important;
 	}
-	
+
 .device-item {
 		display: inline-block;
 		margin: 3px;
