Bug fix (with footer...)

--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@ div.watt {
 	font-size:10px;
 	/*background-color:blue;*/
 }
+
+span.wattfooter {
+	float:left;
+	width:50px;
+	margin-top:-2px;
+	text-align:center;
+	font-size:10px;
+	font-weight:bold;
+	/*background-color:yellow;*/
+}
 div.devicelevel2 {
 	margin-left:43px;
 	/*background-color:green;*/
@@ -138,7 +148,7 @@ img.d100 {
 div.footer {
 	margin-left:1px;
 	margin-right:1px;
-	margin-top:7px;
+	margin-top:5px;
 	/*background-color:#669933;*/
 	max-width:150px;
 	width:150px;
