--- a/index.html
+++ b/index.html
@@ -252,6 +252,22 @@ line-height: 9px;
 /*background-color:green;*/
 }
 
+div.scene {
+	position: absolute !important;
+	height: 60px;
+	width: 150px;
+	z-index: 6;
+	background-color: rgba(60, 60, 50, 0.5);
+	border-top: 1px solid #c0c0c0;
+	border-radius: 0.4em;
+	border-radius: 0.4em;
+	-webkit-border-radius: 0.4em;
+	-webkit-border-radius: 0.4em;
+	box-shadow: 0px 2px 2px 0px rgba(210, 210, 210, 0.4);
+	-webkit-box-shadow: 0px 2px 2px 0px rgba(210, 210, 210, 0.4);
+	
+}
+
 /*non utilisé*/
         .nextIcon
         {
