--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ div.devtitle {
 	-webkit-border-top-right-radius: 0.4em !important;
 	-webkit-border-top-left-radius: 0.4em !important;
 }
+
 div.devmain {
 	max-width:150px;
 }
@@ -254,10 +255,10 @@ line-height: 9px;
 
 div.scene {
 	position: absolute !important;
-	height: 60px;
-	width: 150px;
-	z-index: 6;
+	width: 130px;
+	height: 55px;
 	background-color: rgba(60, 60, 50, 0.5);
+	z-index: 6;
 	border-top: 1px solid #c0c0c0;
 	border-radius: 0.4em;
 	border-radius: 0.4em;
@@ -265,7 +266,49 @@ div.scene {
 	-webkit-border-radius: 0.4em;
 	box-shadow: 0px 2px 2px 0px rgba(210, 210, 210, 0.4);
 	-webkit-box-shadow: 0px 2px 2px 0px rgba(210, 210, 210, 0.4);
-	
+}
+
+div.txtscene {
+	line-height:50px;
+	margin-left: 52px;
+	margin-right: 5px;
+	text-align:center;
+}
+
+span.scenemiddle {
+	width:73px;
+	margin-top: 0px;
+	vertical-align:middle;
+	display:inline-block;
+	line-height:1.2; /* on rétablit le line-height */
+	text-align:center;
+	font-size:12px;
+	color:#fff;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+div.listconfigimg {
+	float:left;
+	width:60px;
+	margin-top: -8px;
+	margin-bottom: -5px;
+	background-repeat: no-repeat;
+	background-position: 0px 0px;
+}
+
+div.listconfig {
+	margin-top: -8px;
+	margin-bottom: -5px;
+	line-height:40px;
+	margin-left: 65px;
+	text-align:left;
+}
+
+span.listconfig {
+	vertical-align:middle;
+	display:inline-block;
+	line-height:1.2; /* on rétablit le line-height */
 }
 
 /*non utilisé*/
