ajout de iphone.html et profiles

--- a/ipad.html
+++ b/ipad.html
@@ -2,7 +2,7 @@
 <html manifest="" lang="fr-FR">
 <head>
 	<meta charset="UTF-8">
-	<title>my Vera - Test</title>
+	<title>my Vera - iPad</title>
 <style type="text/css">	
 #ipad {
 }
